--- a/css/chat.css
+++ b/css/chat.css
@@ -10,23 +10,22 @@ body {
 }
 
 html{
-  font-family: Arial, Helvetica, sans-serif;
-  background: linear-gradient(to right, #57c 0%, #246fa8 100%);
-  font-size: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    background: linear-gradient(to right, rgb(42, 43, 46) 0%, #246fa8 100%);
+    font-size: 10px;
 }
 
-body{
+body {
   display: grid;
-  place-items: center;
+  place-items: center; 
 }
-
 
 #chat-container {
   display: grid;
   grid: 
       'search-container chat-title' 71px
       'conversation-list chat-message-list' 1fr
-      'new-message-container' 78px
+      'new-message-container chat-form'78px
       / 275px 1fr;
   min-width: 800px;
   max-width: 1000px;
@@ -37,48 +36,117 @@ body{
   border-radius: 10px;
 }
 
-#search-container, 
+#search-container,
 #conversation-list,
-#new-message-container  {
-    background: #0048aa
+#new-message-container{
+  background: #0048AA
 }
 
-#search-container{
-  border-radius:10px 0 0 0;
-  box-shadow: 0 1px 3px -1px rgbal(0,0,0,0.75)
+#search-container {
+  display: grid;
+  align-items: center;
+  padding: 0 20px;
+  grid-area: search-container; 
+  border-radius: 10px 0 0 0;
+  box-shadow: 0 1px 3px -1px rgba(0,0,0,0.75);
   z-index: 1;
-} 
+}
 
-#conversation-list {
+#search-container input{
+  color: #eee;
+  outline: none;
+  font-weight: bold;
+  border-radius: 2px;
+  height: 30px;
+  border: 0;
+  padding-left: 48px;
+  padding-right: 20px;
+  font-size: 1.4rem;
+  background: url('../images/search/search.svg') no-repeat rgba(255, 255, 255,0.3);
+  background-position: 15px center;
+  background-size: 20px 20px;
+}
+
+#search-container input::placeholder{
+  color: #ddd;
+  font-weight: bold;
+}
+
+
+#conversation-list{
   grid-area: conversation-list; 
 }
 
-#new-message-container{
+#new-message-container {
+  display: grid;
+  grid: 40px / 40px;
+  align-content: center;
   grid-area: new-message-container;
-  border-top: 1px solid rgba(red, green, blue, alpha);
-  border-radius: 0 0 0 10px
+  border-top: 1px solid rgba(0,0,0,0.25);
+  border-radius: 0 0 0 10px; 
+  padding: 0 15px; 
 }
 
-#chat-title,
+new-message-container a{
+  display: grid;
+  place-content: center center; 
+  background: #eee;
+  border-radius: 100%;
+  color: #002c88;
+  text-decoration: none;
+  font-size: 3.6rem;
+}
+
+#chat-title 
 #chat-form{
   background: #eee;
 }
 
-#chat-title {
+#chat-title{
+  display: grid;
+  grid: 36px / 1fr 36px;
+  align-content: center;
+  align-items: center;
   grid-area: chat-title; 
-  color: #0048aa;
+  color: #0048AA;
   font-weight: bold;
   font-size: 2.0rem;
-  border-radius: 0 01px 0 0;
+  border-radius: 0 10px 0 0;
   box-shadow: 0 1px 3px -1px rgba(0,0,0,0.75);
+  padding: 0 20px;
 }
 
-#chat-message-list {
-  grid-area: chat-message-list
+#chat-title > img{
+  cursor: pointer;
 }
 
-#chat-form {
+#chat-message-list{
+  grid-area: chat-message-list; 
+}
+
+#chat-form{
+  display: grid;
+  grid: 51px / 32px 1fr;
+  align-content: center;
+  align-items: center;
+  grid-gap: 15px;
   grid-area: chat-form;
   border-radius: 0 0 10px 0;
-  border-top: 1px solid rgba(0,0,0,0.25);
+  border-top: 1px solid rgb(0,0,0,0.25);
+  padding-left: 42px;
+  padding-right: 22px;
 }
+
+
+
+
+#chat-form input{
+  outline: none;
+  padding: 15px;
+  border: 2px solid #ddd;
+  color: #330;
+  border-radius: 6px;
+  font-size: 1.4rem; 
+
+}
+
